--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,3 +1,23 @@
 body {
     padding: 10px;
+    
+    
 }
+
+
+.listing-container {
+   display:flex;
+   align-items:center;
+   margin:30px;
+}
+
+.left {
+    width:400px;
+    
+    
+}
+
+.right {
+    width:570px;
+}
+
